tcw3/designer/tests/bad/objinit_field_unknown.tcwdl
pub comp crate::Comp1 {}
pub comp crate::Comp2 {
    const comp1 = crate::Comp1::new! {
        // `Comp1` does not have `unknown_field`
        prop unknown_field = 42;
        //~^ ERROR Component `Comp1` does not have a field named `unknown_field`
    };
}
